# effcpp

./: CMakeLists.txt  README.md
Item1/: CMakeLists.txt  functions.hpp  main.cpp
Item10/: CMakeLists.txt  enums.cpp  enums.hpp  main.cpp
Item2/: CMakeLists.txt  autotest.cpp  autotest.hpp
Item3/: CMakeLists.txt  decltypetest.cpp  decltypetest.hpp
Item4/: CMakeLists.txt  typedeductiontest.cpp
Item5/: CMakeLists.txt  autotest.cpp
Item6/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
Item7/: CMakeLists.txt  main.cpp  widget.cpp  widget.hpp
Item8/: CMakeLists.txt  localfunc.cpp  localfunc.hpp  main.cpp
Item9/: CMakeLists.txt  main.cpp  typealias.hpp
