cmake_minimum_required(VERSION 3.5)
project(EffectiveCPP)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

if (WIN32)
    set(Boost_INCLUDE_DIR d:/dev/boost_1_60_0)
    include_directories(${Boost_INCLUDE_DIR})
else ()
    find_package(boost)
endif ()

add_subdirectory(Item1)
add_subdirectory(Item2)
add_subdirectory(Item3)
add_subdirectory(Item4)
add_subdirectory(Item5)
add_subdirectory(Item6)
add_subdirectory(Item7)
add_subdirectory(Item8)
add_subdirectory(Item9)
add_subdirectory(Item10)